new test case added

--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="69b199">  <td>20/09/14 11:43:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_001.loginPage()[pri:0, instance:com.auto.testCases.TC_LoginTest_001@6a4f787b]">loginPage</td> 
-  <td>main@1586845078</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>20/09/14 11:43:22</td>   <td>-29861</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String)[pri:0, instance:com.auto.testCases.TC_LoginTest_001@6a4f787b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1586845078</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>20/09/14 11:45:46</td>   <td>113756</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.auto.testCases.TC_LoginTest_001@6a4f787b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1586845078</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/09/16 14:52:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_001.loginPage()[pri:0, instance:com.auto.testCases.TC_LoginTest_001@1e397ed7]">loginPage</td> 
+  <td>main@1308109015</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>20/09/16 14:52:16</td>   <td>-12246</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String)[pri:0, instance:com.auto.testCases.TC_LoginTest_001@1e397ed7]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1308109015</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>20/09/16 14:53:14</td>   <td>45441</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.auto.testCases.TC_LoginTest_001@1e397ed7]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1308109015</td>   <td></td> </tr>
 </table>
