--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="90c9c3">  <td>20/09/11 16:02:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.auto.testCases.TC_LoginTest_001@77caeb3e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>20/09/11 16:02:52</td>   <td>6313</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_001.loginPage()[pri:0, instance:com.auto.testCases.TC_LoginTest_001@77caeb3e]">loginPage</td> 
-  <td>main@1690254271</td>   <td></td> </tr>
-<tr bgcolor="90c9c3">  <td>20/09/11 16:04:51</td>   <td>125523</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.auto.testCases.TC_LoginTest_001@77caeb3e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="b58bd3">  <td>20/09/16 11:58:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_001.loginPage()[pri:0, instance:com.auto.testCases.TC_LoginTest_001@3590fc5b]">loginPage</td> 
+  <td>main@188523822</td>   <td></td> </tr>
 </table>
