--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b3acfe">  <td>20/09/16 14:52:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String)[pri:0, instance:com.auto.testCases.TC_LoginTest_001@1e397ed7]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1308109015</td>   <td></td> </tr>
-<tr bgcolor="6fc185">  <td>20/09/16 14:52:29</td>   <td>12246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_001.loginPage()[pri:0, instance:com.auto.testCases.TC_LoginTest_001@1e397ed7]">loginPage</td> 
-  <td>main@1308109015</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/09/16 14:53:14</td>   <td>57687</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.auto.testCases.TC_LoginTest_001@1e397ed7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1308109015</td>   <td></td> </tr>
+<tr bgcolor="7690be">  <td>20/09/16 16:06:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String)[pri:0, instance:com.auto.testCases.TC_LoginTest_001@1e397ed7]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1786364562</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/09/16 16:06:15</td>   <td>13540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_001.loginPage()[pri:0, instance:com.auto.testCases.TC_LoginTest_001@1e397ed7]">loginPage</td> 
+  <td>main@1786364562</td>   <td></td> </tr>
+<tr bgcolor="7690be">  <td>20/09/16 16:06:58</td>   <td>57179</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.auto.testCases.TC_LoginTest_001@1e397ed7]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1786364562</td>   <td></td> </tr>
+<tr bgcolor="7690be">  <td>20/09/16 16:06:59</td>   <td>58389</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String)[pri:0, instance:com.auto.testCases.TC_LoginDDT_002@490ab905]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1786364562</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>20/09/16 16:07:13</td>   <td>71619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginPage()[pri:0, instance:com.auto.testCases.TC_LoginDDT_002@490ab905]">loginPage</td> 
+  <td>main@1786364562</td>   <td></td> </tr>
+<tr bgcolor="7690be">  <td>20/09/16 16:07:56</td>   <td>114653</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.auto.testCases.TC_LoginDDT_002@490ab905]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1786364562</td>   <td></td> </tr>
+<tr bgcolor="7690be">  <td>20/09/16 16:07:57</td>   <td>116040</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String)[pri:0, instance:com.auto.testCases.TC_LoginTest_001@544fe44c]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1786364562</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/09/16 16:08:16</td>   <td>135378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_001.loginPage()[pri:0, instance:com.auto.testCases.TC_LoginTest_001@544fe44c]">loginPage</td> 
+  <td>main@1786364562</td>   <td></td> </tr>
+<tr bgcolor="7690be">  <td>20/09/16 16:08:59</td>   <td>177947</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.auto.testCases.TC_LoginTest_001@544fe44c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1786364562</td>   <td></td> </tr>
+<tr bgcolor="7690be">  <td>20/09/16 16:09:05</td>   <td>184101</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String)[pri:0, instance:com.auto.testCases.TC_LoginDDT_002@31610302]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1786364562</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>20/09/16 16:09:23</td>   <td>201600</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginPage()[pri:0, instance:com.auto.testCases.TC_LoginDDT_002@31610302]">loginPage</td> 
+  <td>main@1786364562</td>   <td></td> </tr>
+<tr bgcolor="7690be">  <td>20/09/16 16:10:05</td>   <td>244258</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.auto.testCases.TC_LoginDDT_002@31610302]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1786364562</td>   <td></td> </tr>
 </table>
