committing latest changes

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,16 +9,27 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Auto Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">116,098</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Auto Test1</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">133,987</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">4</th><th class="num">0</th><th class="num">0</th><th class="num">250,085</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">Auto Test</a></td><td class="num">0</td><td class="num attn">2</td><td class="num">0</td><td class="num">401</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Auto Test1</a></td><td class="num">0</td><td class="num attn">2</td><td class="num">0</td><td class="num">16</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">0</th><th class="num attn">4</th><th class="num">0</th><th class="num">417</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Auto Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.auto.testCases.TC_LoginDDT_002</td><td><a href="#m0">loginPage</a></td><td rowspan="1">1600252633177</td><td rowspan="1">43032</td></tr><tr class="passedodd"><td rowspan="1">com.auto.testCases.TC_LoginTest_001</td><td><a href="#m1">loginPage</a></td><td rowspan="1">1600252575098</td><td rowspan="1">43625</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Auto Test1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.auto.testCases.TC_LoginDDT_002</td><td><a href="#m2">loginPage</a></td><td rowspan="1">1600252763158</td><td rowspan="1">42655</td></tr><tr class="passedodd"><td rowspan="1">com.auto.testCases.TC_LoginTest_001</td><td><a href="#m3">loginPage</a></td><td rowspan="1">1600252696936</td><td rowspan="1">42568</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Auto Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">com.auto.testCases.TC_LoginDDT_002</td><td><a href="#m0">loginPage</a></td><td rowspan="1">1600421610779</td><td rowspan="1">0</td></tr><tr class="skippedodd"><td rowspan="1">com.auto.testCases.TC_LoginTest_001</td><td><a href="#m1">loginPage</a></td><td rowspan="1">1600421610751</td><td rowspan="1">0</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Auto Test1 &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">com.auto.testCases.TC_LoginTest_001</td><td><a href="#m2">setUp</a></td><td rowspan="1">1600421610355</td><td rowspan="1">0</td></tr><tr><th colspan="4">Auto Test1 &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="1">com.auto.testCases.TC_LoginTest_001</td><td><a href="#m3">tearDown</a></td><td rowspan="1">1600421611661</td><td rowspan="1">0</td></tr><tr><th colspan="4">Auto Test1 &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">com.auto.testCases.TC_LoginDDT_002</td><td><a href="#m4">loginPage</a></td><td rowspan="1">1600421611426</td><td rowspan="1">0</td></tr><tr class="skippedodd"><td rowspan="1">com.auto.testCases.TC_LoginTest_001</td><td><a href="#m5">loginPage</a></td><td rowspan="1">1600421611421</td><td rowspan="1">0</td></tr></tbody>
 </table>
 <h2>Auto Test</h2><h3 id="m0">com.auto.testCases.TC_LoginDDT_002#loginPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">com.auto.testCases.TC_LoginTest_001#loginPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Auto Test1</h2><h3 id="m2">com.auto.testCases.TC_LoginDDT_002#loginPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.auto.testCases.TC_LoginTest_001#loginPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Auto Test1</h2><h3 id="m2">com.auto.testCases.TC_LoginTest_001#setUp</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.TestNGException: 
+Parameter &apos;browser&apos; is required by BeforeSuite on method setUp but has not been marked @Optional or defined
+in C:\Users\anjibabu\git\auto_001\testng.xml
+... Removed 17 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.auto.testCases.TC_LoginTest_001#tearDown</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.auto.testCases.TC_LoginDDT_002#loginPage</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.TestNGException: 
+Parameter &apos;browser&apos; is required by BeforeSuite on method setUp but has not been marked @Optional or defined
+in C:\Users\anjibabu\git\auto_001\testng.xml
+... Removed 17 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.auto.testCases.TC_LoginTest_001#loginPage</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.TestNGException: 
+Parameter &apos;browser&apos; is required by BeforeSuite on method setUp but has not been marked @Optional or defined
+in C:\Users\anjibabu\git\auto_001\testng.xml
+... Removed 17 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
